Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <figcaption class="titulo__img">PET SHOP DA BINA</figcaption>
         </figure>
         <main class="tela_login">
-            <h1 class="cadastre">Cadastre sua nova <span>Conta</span> ou Acesse sua <span>conta</h1>
+            <h1 class="cadastre">Cadastre sua nova <span>Conta</span> ou Faça o <span>Login</h1>
             <div class="actions">
                 <a href="./pages/cadastro.html">Cadastrar nova conta</a>
                 <a href="./pages/login.html">Logar conta cadastrada</a>
