--- a/pages/login.html
+++ b/pages/login.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/pages__login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Página de Login</title>
 </head>
 <body>
     <div class="container">
         <figure>
             <img src="../assets/MIMI-.png" alt="Imagem de perfil">
+            <figcaption class="titulo__img">
+                <a class="home" href="../index.html">Home</a></figcaption>
             <figcaption class="titulo__img">Bem-vindo ao nosso site</figcaption>
         </figure>
         <form>
@@ -23,6 +26,12 @@
             
             <div class="recuperar-senha">
                 <a class="recup__senha" href="#">Esqueceu sua senha?</a>
+            </div>
+            <div class="login-options">
+                <p>Ou entre com</p>
+                <button class="facebook-login"><i class="fab fa-facebook-f"></i> Facebook</button>
+                <button class="google-login"><i class="fab fa-google"></i> Google</button>
+                <button class="twitter-login"><i class="fab fa-twitter"></i> Twitter</button>
             </div>
         </form>
     </div>
