--- a/pages/login.html
+++ b/pages/login.html
@@ -12,7 +12,7 @@
         <figure>
             <img src="../assets/MIMI-.png" alt="Imagem de perfil">
             <figcaption class="titulo__img">
-                <a class="home" href="../index.html">Home</a></figcaption>
+                <a class="home" href="../index.html">Início</a></figcaption>
             <figcaption class="titulo__img">Bem-vindo ao nosso site</figcaption>
         </figure>
         <form>
