--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="../index.html">Home</a>
+        <a href="../index.html">Início</a>
     </header>
     <main>
         <section>
